--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <!-- displays site properly based on user's device -->
 
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/796dc21306.js" crossorigin="anonymous"></script>
 
     <title>Frontend Mentor | Huddle landing page with single introductory section</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
       .attribution {
         font-size: 11px;
         text-align: center;
+        width: 100%;
+        margin: 0 auto;
       }
       .attribution a {
         color: hsl(228, 45%, 44%);
@@ -21,11 +24,34 @@
     </style>
   </head>
   <body>
-    Build The Community Your Fans Will Love Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine
-    discussion. Register
+    <main class="wrapper">
+      <div class="backgrounds">
+        <img src="./images/bg-mobile.svg" alt="" id="mobile-bg" />
+        <img src="./images/bg-desktop.svg" alt="" id="desktop-bg" />
+      </div>
+      <div class="container">
+        <img class="logo" src="./images/logo.svg" alt="Huddle Logo" />
+
+        <div class="illustration">
+          <img src="./images/illustration-mockups.svg" alt="" />
+        </div>
+        <div class="text">
+          <h1>Build The Community Your Fans Will Love</h1>
+          <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
+          <button class="register">Register</button>
+        </div>
+        <nav class="social-links">
+          <button><i class="fa-brands fa-facebook-f"></i></button>
+          <button><i class="fa-brands fa-twitter"></i></button>
+          <button><i class="fa-brands fa-instagram"></i></button>
+        </nav>
+      </div>
+    </main>
 
     <footer>
-      <p class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">YayoKB</a>.</p>
+      <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://www.frontendmentor.io/profile/YayoKB">YayoKB</a>.
+      </p>
     </footer>
   </body>
 </html>
